--- a/src/app/main/pages/improvements/dialogs/edit-dialog-improvenments/edit-dialog-improvenments.component.html
+++ b/src/app/main/pages/improvements/dialogs/edit-dialog-improvenments/edit-dialog-improvenments.component.html
@@ -12,10 +12,16 @@
                     <mat-form-field appearance="outline" style="width: 200px;">
                         <mat-label>Nombre</mat-label>
                         <input matInput placeholder="Nombre" formControlName="name">
+                        <mat-error *ngIf="editImprovenmentsForm.controls['name'].errors">
+                            Campo <strong>requerido.</strong>
+                        </mat-error>
                     </mat-form-field>
                     <mat-form-field appearance="outline" style="width: 200px;">
                         <mat-label>Modelo</mat-label>
                         <input matInput placeholder="Modelo" formControlName="model">
+                        <mat-error *ngIf="editImprovenmentsForm.controls['model'].errors">
+                            Campo <strong>requerido.</strong>
+                        </mat-error>
                     </mat-form-field>
                 </div>
                 <div>
@@ -23,6 +29,9 @@
                         <mat-label>Descripción</mat-label>
                         <textarea matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="6.15"
                             cdkAutosizeMaxRows="15" formControlName="description" placeholder="Descripción"></textarea>
+                        <mat-error *ngIf="editImprovenmentsForm.controls['description'].errors">
+                            Campo <strong>requerido.</strong>
+                        </mat-error>
                     </mat-form-field>
                 </div>
             </div>
@@ -32,12 +41,18 @@
                     <mat-form-field appearance="outline" style="width: 200px;">
                         <mat-label>Compononte</mat-label>
                         <input matInput placeholder="Compononte" formControlName="component">
+                        <mat-error *ngIf="editImprovenmentsForm.controls['component'].errors">
+                            Campo <strong>requerido.</strong>
+                        </mat-error>
                     </mat-form-field>
                 </div>
                 <div class="container-form__checked--date">
                     <mat-form-field appearance="outline" style="width: 200px;">
                         <mat-label>Fecha de publicación</mat-label>
                         <input matInput [matDatepicker]="picker1" formControlName="date">
+                        <mat-error *ngIf="editImprovenmentsForm.controls['date'].errors">
+                            Campo <strong>requerido.</strong>
+                        </mat-error>
                         <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                         <mat-datepicker #picker1></mat-datepicker>
                     </mat-form-field>
@@ -56,20 +71,32 @@
                     <div [formGroupName]="i" class="container-form-array">
                         <mat-form-field appearance="outline" style="width: 200px;" class="container-form-array__inputs">
                             <mat-label>Parte</mat-label>
-                            <input matInput placeholder="Label" formControlName="sparePart">
+                            <input matInput placeholder="Parte" formControlName="sparePart">
+                            <mat-error *ngIf="parts.controls[i].get('sparePart').errors">
+                                Campo <strong>requerido.</strong>
+                            </mat-error>
                             <mat-icon matSuffix>settings</mat-icon>
                         </mat-form-field>
                         <mat-form-field appearance="outline" style="width: 100px;" class="container-form-array__inputs">
                             <mat-label>Cantidad</mat-label>
                             <input matInput placeholder="Cantidad" formControlName="quantity">
+                            <mat-error *ngIf="parts.controls[i].get('quantity').errors">
+                                Campo <strong>requerido.</strong>
+                            </mat-error>
                         </mat-form-field>
                         <mat-form-field appearance="outline" style="width: 200px;" class="container-form-array__inputs">
                             <mat-label>Nº de parte actual</mat-label>
                             <input matInput placeholder="Nº de parte actual" formControlName="currentPart">
+                            <mat-error *ngIf="parts.controls[i].get('currentPart').errors">
+                                Campo <strong>requerido.</strong>
+                            </mat-error>
                         </mat-form-field>
                         <mat-form-field appearance="outline" style="width: 200px;" class="container-form-array__inputs">
                             <mat-label>Nº de parte mejorada</mat-label>
                             <input matInput placeholder="Nº de parte mejorada" formControlName="improvedPart">
+                            <mat-error *ngIf="parts.controls[i].get('improvedPart').errors">
+                                Campo <strong>requerido.</strong>
+                            </mat-error>
                         </mat-form-field>
                         <div class="container-form-array__checked">
                             <span>Kit</span>
@@ -87,8 +114,10 @@
             </button>
         </mat-dialog-content>
         <mat-dialog-actions align="end">
-            <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-            <button type="button" mat-raised-button color="primary" class="footer__btn-save" (click)="save()">ENVIAR</button>
+            <button type="button" mat-stroked-button color="warn" class="footer__btn-close"
+                mat-dialog-close>CERRAR</button>
+            <button type="button" mat-raised-button color="primary" class="footer__btn-save"
+                (click)="save()">ENVIAR</button>
         </mat-dialog-actions>
     </form>
 </div>
