--- a/src/app/main/pages/settings/settings.component.html
+++ b/src/app/main/pages/settings/settings.component.html
@@ -11,84 +11,94 @@
     </button>
   </div>
   <div class="body-container">
-    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
-    <div style="overflow: auto;">
-      <table mat-table [dataSource]="settingDataSource" matSort  class="mat-elevation-z8">
+    <ng-container *ngIf="settingDataSource.data.length; else default">
+      <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+      <div style="overflow: auto;">
+        <table mat-table [dataSource]="settingDataSource" matSort class="mat-elevation-z8">
 
-        <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Fecha </th>
-          <td mat-cell *matCellDef="let element" class="table__cell">
-            {{element.date | date:"dd/MM/yyyy"}}
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Fecha </th>
+            <td mat-cell *matCellDef="let element" class="table__cell">
+              {{element.date | date:"dd/MM/yyyy"}}
+            </td>
+          </ng-container>
 
-        <ng-container matColumnDef="name" sticky>
-          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Nombre de Mejora </th>
-          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.name}} </td>
-        </ng-container>
-        <ng-container matColumnDef="component">
-          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Componente </th>
-          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.component}} </td>
-        </ng-container>
-        <ng-container matColumnDef="model">
-          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Modelo </th>
-          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.model}} </td>
-        </ng-container>
+          <ng-container matColumnDef="name" sticky>
+            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Nombre de Mejora </th>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.name}} </td>
+          </ng-container>
+          <ng-container matColumnDef="component">
+            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Componente </th>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.component}} </td>
+          </ng-container>
+          <ng-container matColumnDef="model">
+            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Modelo </th>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.model}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="media">
-          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Media </th>
-          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.media}} </td>
-        </ng-container>
+          <ng-container matColumnDef="media">
+            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Media </th>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.media}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="quantity">
-          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Cantidad </th>
-          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.quantity}} </td>
-        </ng-container>
+          <ng-container matColumnDef="quantity">
+            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Cantidad </th>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.quantity}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="currentPart">
-          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> N/P Actual </th>
-          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.currentPart}} </td>
-        </ng-container>
+          <ng-container matColumnDef="currentPart">
+            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> N/P Actual </th>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.currentPart}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="improvedPart">
-          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> N/P Mejorado </th>
-          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.improvedPart}} </td>
-        </ng-container>
+          <ng-container matColumnDef="improvedPart">
+            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> N/P Mejorado </th>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.improvedPart}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Descripción </th>
-          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.description}} </td>
-        </ng-container>
+          <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Descripción </th>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.description}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="stock">
-          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Stock </th>
-          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.stock}} </td>
-        </ng-container>
+          <ng-container matColumnDef="stock">
+            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Stock </th>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.stock}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="availability">
-          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Disponibilidad </th>
-          <td mat-cell *matCellDef="let element" class="table__cell">
-            {{element.availability | date:"dd/MM/yyyy"}}
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="availability">
+            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Disponibilidad </th>
+            <td mat-cell *matCellDef="let element" class="table__cell">
+              {{element.availability | date:"dd/MM/yyyy"}}
+            </td>
+          </ng-container>
 
-        <ng-container matColumnDef="actions" stickyEnd>
-          <th mat-header-cell *matHeaderCellDef class="table__cell">
-            Acciones
-          </th>
-          <td mat-cell *matCellDef="let raw; index as i" class="table__cell">
-            <button mat-icon-button class="w3-small" (click)="remove(i)">
-              <mat-icon>remove_circle</mat-icon>
-            </button>
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="actions" stickyEnd>
+            <th mat-header-cell *matHeaderCellDef class="table__cell">
+              Acciones
+            </th>
+            <td mat-cell *matCellDef="let raw; index as i" class="table__cell">
+              <button mat-icon-button class="w3-small" (click)="remove(i)">
+                <mat-icon>remove_circle</mat-icon>
+              </button>
+            </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="settingDisplayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: settingDisplayedColumns;"></tr>
-      </table>
-    </div>
-    <mat-paginator #settingPaginator class="ms-paginator" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
-    </mat-paginator>
+          <tr mat-header-row *matHeaderRowDef="settingDisplayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: settingDisplayedColumns;"></tr>
+        </table>
+      </div>
+      <mat-paginator #settingPaginator class="ms-paginator" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+      </mat-paginator>
+    </ng-container>
+    <ng-template #default>
+      <div class="default">
+        <span>
+          <mat-icon style="vertical-align: middle;">upload</mat-icon> Adjunte archivo
+        </span>
+      </div>
+    </ng-template>
+
 
   </div>
 
@@ -96,7 +106,7 @@
     <button type="file" aria-label="add" mat-button class="footer__btn-close" (click)="clearDataTable()">
       CANCELAR
     </button>
-    <button type="file" aria-label="add" mat-button class="footer__btn-save" (click)="saveDataTable()">
+    <button type="file" aria-label="add" mat-button class="footer__btn-save" (click)="saveDataTable()" [disabled]="!settingDataSource.data.length">
       GUARDAR
     </button>
   </div>
