:art: delete improvenment no validate

--- a/src/app/main/pages/improvements/dialogs/delete-dialog-improvenments/delete-dialog-improvenments.component.html
+++ b/src/app/main/pages/improvements/dialogs/delete-dialog-improvenments/delete-dialog-improvenments.component.html
@@ -17,5 +17,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-    <button type="button" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial>SI, BORRAR</button>
+    <button type="button" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial (click)="deteteImprovenment()">SI, BORRAR</button>
 </mat-dialog-actions>
