--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -11,7 +11,7 @@
     </button>
 
     <div class="span-version">
-      <span>{{ version }}</span>
+      <span>{{ authSevice.version }}</span>
     </div>
   </div>
   <footer class="footer">
