--- a/src/app/main/main/main.component.scss
+++ b/src/app/main/main/main.component.scss
@@ -1,6 +1,7 @@
 $base-font: "Poppins", sans-serif;
 
 .main_toolbar {
+  display: flex;
   background: #333333;
   color: white;
 }
@@ -26,11 +27,11 @@ $base-font: "Poppins", sans-serif;
   position: sticky;
   top: 0;
   z-index: 1;
-} 
+}
 
 //Toolbar
-.container-toolbar{
-  border-top: 24px solid #F2C94C;
+.container-toolbar {
+  border-top: 24px solid #f2c94c;
 }
 .main__toolbar {
   background-size: cover;
@@ -40,11 +41,11 @@ $base-font: "Poppins", sans-serif;
   z-index: 4;
   color: white;
 }
-.btn-exit-app{
+.btn-exit-app {
   position: absolute;
   right: 50px;
 }
-.main__space{
+.main__space {
   padding-top: 64px;
 }
 
@@ -76,10 +77,16 @@ mat-card img {
 }
 
 .text-menu-title-role {
+  margin-bottom: 8px;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0.25px;
   color: rgba(0, 0, 0, 0.6);
+}
+
+.text-menu-title-version {
+  font-size: 0.7rem;
+  font-weight: 500;
 }
 
 .mat-item-list-span {
@@ -93,12 +100,11 @@ mat-card img {
   margin-left: 33px;
 }
 
-.mat-icon-menu{
+.mat-icon-menu {
   width: 22px;
   height: 22px;
 }
 
-
 .active {
-  background: #9b27b036
+  background: #9b27b036;
 }
