--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -9,6 +9,7 @@
       <mat-card-content>
         <mat-card-title class="text-menu-title-user">{{item.name}}</mat-card-title>
         <mat-card-subtitle class="text-menu-title-role">{{item.role}}</mat-card-subtitle>
+        <mat-card-subtitle class="text-menu-title-version">{{authService.version}}</mat-card-subtitle>
       </mat-card-content>
     </mat-card>
     <hr class="hr-line">
@@ -46,11 +47,14 @@
       <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
+      
       <button type="button" aria-label="Toggle sidenav" mat-button class="btn-exit-app" (click)="exitApp()">
         CERRAR SESION
         <mat-icon aria-label="Side nav toggle icon">exit_to_app</mat-icon>
       </button>
+      
       <span>Ingeniería DSP</span>
+      
     </mat-toolbar>
     <div>
       <router-outlet></router-outlet>
