:art: :package: add component shared search

--- a/src/app/main/pages/evaluations/evaluations-process/evaluations-process.component.html
+++ b/src/app/main/pages/evaluations/evaluations-process/evaluations-process.component.html
@@ -1,1 +1,3 @@
-<p>evaluations-process works!</p>
+<div class="container">
+    <app-search-evaluations [title]="'En proceso'"></app-search-evaluations>
+</div>
