--- a/src/app/main/pages/evaluations/evaluations.component.html
+++ b/src/app/main/pages/evaluations/evaluations.component.html
@@ -5,7 +5,9 @@
             <mat-tab label="SOLICITUDES">        
                 <app-evaluations-requests></app-evaluations-requests>                
             </mat-tab>
-            <mat-tab label="EN PROCESO"> PROCESO 2 </mat-tab>
+            <mat-tab label="EN PROCESO"> 
+              <app-evaluations-process></app-evaluations-process>
+            </mat-tab>
             <mat-tab label="HISTORIAL"> 
                 <div class="body-container">
                   <div>   <!-- *ngIf="improvement$ |async" -->
