:art: routes to evaluation tabs

--- a/src/app/main/pages/evaluations/evaluations.component.scss
+++ b/src/app/main/pages/evaluations/evaluations.component.scss
@@ -1,9 +1,11 @@
-.container{
+.container {
     margin: 40px 70px 40px 70px;
 }
 
+.label:active {
+    color: #6200ee;
+}
 
-.label:active{
-    color:#6200EE;
-
+a:active {
+    color: #6200ee;
 }
