--- a/src/app/main/pages/evaluations/evaluations.component.html
+++ b/src/app/main/pages/evaluations/evaluations.component.html
@@ -2,7 +2,7 @@
     <h1 style="font-size: 2.5em; margin-left: 20px; font-weight: bold;">Evaluaciones</h1>     
     <div class="container-body">
         <mat-tab-group>
-            <mat-tab label="SOLICITUDES">        
+            <mat-tab label="SOLICITUDES" style="padding: 10px 0px 10px 0px;">    
                 <app-evaluations-requests></app-evaluations-requests>                
             </mat-tab>
             <mat-tab label="EN PROCESO"> PROCESO 2 </mat-tab>
